--- a/paginas/artists/Jente.html
+++ b/paginas/artists/Jente.html
@@ -17,12 +17,9 @@
   <!-- ============ HEADER ============ -->
   <header>
   <nav class="nav" aria-label="Hoofdnavigatie">
-    <!-- Logo -->
     <a href="../../" class="brand" aria-label="VITRIEN — Home">
       <img src="../../assets/img/logo.png" alt="Vitrien logo">
     </a>
-
-    <!-- Desktop menu -->
     <div class="menu" role="menubar">
       <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About">Over</a>
       <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
@@ -31,20 +28,14 @@
       <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
       <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact">Contact</a>
     </div>
-
-    <!-- Desktop taal-switch -->
     <div class="lang-switch desktop-only" aria-label="Taalwissel">
       <button onclick="setLang('nl')" class="active" data-lang="nl">NL</button> |
       <button onclick="setLang('en')" data-lang="en">EN</button>
     </div>
-
-    <!-- Hamburger -->
     <button class="burger" aria-label="Open menu" onclick="toggleDrawer()">
       <span></span><span></span><span></span>
     </button>
   </nav>
-
-  <!-- Mobile drawer -->
   <div class="drawer" id="drawer" aria-hidden="true">
     <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About" onclick="toggleDrawer()">Over</a>
     <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues" onclick="toggleDrawer()">Data & locaties</a>
@@ -52,8 +43,6 @@
     <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists" onclick="toggleDrawer()">Kunstenaars</a>
     <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030" onclick="toggleDrawer()">LOV2030</a>
     <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact" onclick="toggleDrawer()">Contact</a>
-
-    <!-- Mobile taal-switch -->
     <div class="lang-switch mobile-only" aria-label="Taalwissel">
       <button onclick="setLang('nl')" class="active" data-lang="nl">NL</button> |
       <button onclick="setLang('en')" data-lang="en">EN</button>
@@ -67,8 +56,8 @@
       <div class="container">
         <div class="meta" data-lang-nl="Kunstenaar" data-lang-en="Artist">Kunstenaar</div>
         <h1>Jente Waerzeggers</h1>
-        <p class="lead" data-lang-nl="Beeldende kunst • Performance • Installatie" data-lang-en="Visual arts • Performance • Installation">
-          Beeldende kunst • Performance • Installatie
+        <p class="lead" data-lang-nl="Fotografie • Beeldende kunst • Muziek" data-lang-en="Photography • Visual arts • Music">
+          Fotografie • Beeldende kunst • Muziek
         </p>
       </div>
     </section>
@@ -87,22 +76,22 @@
       <div class="container grid two-col">
         <article>
           <div class="meta" data-lang-nl="Biografie" data-lang-en="Biography">Biografie</div>
-          <p data-lang-nl="Jente Waerzeggers (°1993) ontwikkelt een praktijk waarin beeldende kunst, performance en installaties elkaar kruisen. Hij onderzoekt hoe lichamen, objecten en ruimtes met elkaar in interactie treden en zo nieuwe betekenissen genereren. Zijn werk balanceert tussen intieme gebaren en publieke interventies."
-             data-lang-en="Jente Waerzeggers (b. 1993) develops a practice at the intersection of visual arts, performance and installation. He investigates how bodies, objects and spaces interact with each other to generate new meanings. His work balances between intimate gestures and public interventions.">
-            Jente Waerzeggers (°1993) ontwikkelt een praktijk waarin beeldende kunst, performance en installaties elkaar kruisen...
+          <p data-lang-nl="Jente Waerzeggers (°1999, Leuven) is fotograaf, beeldend kunstenaar, muzikant en radiomaker. Hij behaalde een master in Beeldende Kunsten (LUCA School of Arts, 2022) en werkte als fotograaf voor onder andere Cas-co, Listen Festival, Horst en STELPLAATS. Zijn praktijk beweegt zich tussen beeld, geluid en publicatie. Hij is oprichter van Not So Difficult Magazine en runt (y) publishing, een experimentele uitgeverij in boekvorm. Daarnaast is hij resident DJ bij Kiosk Radio en actief binnen het Brusselse label Kontakt Group. Jente woont in België maar werkt regelmatig in Parijs en Nederland."
+             data-lang-en="Jente Waerzeggers (b. 1999, Leuven) is a photographer, visual artist, musician and radio maker. He holds a Master in Fine Arts (LUCA School of Arts, 2022) and has worked as a photographer for Cas-co, Listen Festival, Horst and STELPLAATS. His practice moves between image, sound and publishing. He is the founder of Not So Difficult Magazine and runs (y) publishing, an experimental publishing house. In addition, he is a resident DJ at Kiosk Radio and part of the Brussels label Kontakt Group. Jente lives in Belgium but often works in Paris and the Netherlands.">
+            Jente Waerzeggers (°1999, Leuven) is fotograaf, beeldend kunstenaar, muzikant en radiomaker...
           </p>
           <div class="meta" style="margin-top:20px" data-lang-nl="Praktisch" data-lang-en="Practical">Praktisch</div>
           <p>
-            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://jentewaerzeggers.com/</a><br>
-            Contact: <a class="mono-link" href="mailto:jente@email.com">jente@email.com</a>
+            Email: <a class="mono-link" href="mailto:jente.waerzeggers@gmail.com">jente.waerzeggers@gmail.com</a><br>
+            Instagram: <a class="mono-link" href="https://instagram.com/jente.waerzeggers" target="_blank">@jente.waerzeggers</a>
           </p>
         </article>
 
         <article>
           <div class="meta" data-lang-nl="Artist statement" data-lang-en="Artist statement">Artist statement</div>
-          <p data-lang-nl="Mijn werk vertrekt vanuit de lichamelijke ervaring van ruimte. Door performatieve en sculpturale elementen te verweven, wil ik situaties creëren waarin de toeschouwer zich bewust wordt van eigen aanwezigheid en beweging. Het gaat mij om de fragiele balans tussen controle en overgave."
-             data-lang-en="My work originates from the bodily experience of space. By intertwining performative and sculptural elements, I create situations that make the viewer aware of their own presence and movement. My practice revolves around the fragile balance between control and surrender.">
-            Mijn werk vertrekt vanuit de lichamelijke ervaring van ruimte...
+          <p data-lang-nl="In mijn werk onderzoek ik hoe fotografie en presentatievormen elkaar beïnvloeden. Recent werk omvat lichtbak-installaties, waarbij de commerciële connotatie van lichtreclame contrasteert met de ‘hoge kunst’ context van fotografie. Door beelden uit mijn persoonlijke archief te tonen in lichtbakken, zoek ik het raakvlak tussen deze werelden. Voor Vitrien presenteer ik een installatie die inspeelt op de visuele taal van immokantoren, waarbij archiefbeelden in de publieke ruimte een nieuwe gelaagdheid krijgen."
+             data-lang-en="In my work I investigate how photography and modes of presentation influence each other. Recent work includes lightbox installations, where the commercial connotation of light advertising contrasts with the ‘high art’ context of photography. By presenting images from my personal archive in lightboxes, I explore the intersection between these worlds. For Vitrien I present an installation that refers to the visual language of real estate offices, recontextualising archival images in public space.">
+            In mijn werk onderzoek ik hoe fotografie en presentatievormen elkaar beïnvloeden...
           </p>
         </article>
       </div>
@@ -150,4 +139,3 @@
   <script src="../../assets/js/app.js" defer></script>
 </body>
 </html>
-
