--- a/paginas/artists/Nora.html
+++ b/paginas/artists/Nora.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Nora — VITRIEN</title>
+  <title>Nora Mahammed — VITRIEN</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,12 +17,9 @@
   <!-- ============ HEADER ============ -->
   <header>
   <nav class="nav" aria-label="Hoofdnavigatie">
-    <!-- Logo -->
     <a href="../../" class="brand" aria-label="VITRIEN — Home">
       <img src="../../assets/img/logo.png" alt="Vitrien logo">
     </a>
-
-    <!-- Desktop menu -->
     <div class="menu" role="menubar">
       <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About">Over</a>
       <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
@@ -31,20 +28,14 @@
       <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
       <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact">Contact</a>
     </div>
-
-    <!-- Desktop taal-switch -->
     <div class="lang-switch desktop-only" aria-label="Taalwissel">
       <button onclick="setLang('nl')" class="active" data-lang="nl">NL</button> |
       <button onclick="setLang('en')" data-lang="en">EN</button>
     </div>
-
-    <!-- Hamburger -->
     <button class="burger" aria-label="Open menu" onclick="toggleDrawer()">
       <span></span><span></span><span></span>
     </button>
   </nav>
-
-  <!-- Mobile drawer -->
   <div class="drawer" id="drawer" aria-hidden="true">
     <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About" onclick="toggleDrawer()">Over</a>
     <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues" onclick="toggleDrawer()">Data & locaties</a>
@@ -52,8 +43,6 @@
     <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists" onclick="toggleDrawer()">Kunstenaars</a>
     <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030" onclick="toggleDrawer()">LOV2030</a>
     <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact" onclick="toggleDrawer()">Contact</a>
-
-    <!-- Mobile taal-switch -->
     <div class="lang-switch mobile-only" aria-label="Taalwissel">
       <button onclick="setLang('nl')" class="active" data-lang="nl">NL</button> |
       <button onclick="setLang('en')" data-lang="en">EN</button>
@@ -66,9 +55,9 @@
     <section class="hero" style="min-height:auto; padding:60px 0 20px">
       <div class="container">
         <div class="meta" data-lang-nl="Kunstenaar" data-lang-en="Artist">Kunstenaar</div>
-        <h1>Nora</h1>
-        <p class="lead" data-lang-nl="Fotografie • Video • Installatie" data-lang-en="Photography • Video • Installation">
-          Fotografie • Video • Installatie
+        <h1>Nora Mahammed</h1>
+        <p class="lead" data-lang-nl="Interieurarchitectuur • Installatie • Ruimtelijke kunst" data-lang-en="Interior architecture • Installation • Spatial art">
+          Interieurarchitectuur • Installatie • Ruimtelijke kunst
         </p>
       </div>
     </section>
@@ -87,22 +76,22 @@
       <div class="container grid two-col">
         <article>
           <div class="meta" data-lang-nl="Biografie" data-lang-en="Biography">Biografie</div>
-          <p data-lang-nl="Nora (°1991) werkt met fotografie, video en installaties waarin ze de relatie tussen individu en omgeving onderzoekt. Haar werk legt subtiele interacties bloot tussen mens, landschap en herinnering. Ze combineert documentaire elementen met poëtische beelden die ruimte laten voor interpretatie."
-             data-lang-en="Nora (b. 1991) works with photography, video and installations in which she explores the relationship between individual and environment. Her work reveals subtle interactions between people, landscape and memory. She combines documentary elements with poetic images that leave room for interpretation.">
-            Nora (°1991) werkt met fotografie, video en installaties...
+          <p data-lang-nl="Nora Mahammed is interieurarchitect en beeldend kunstenaar, gevestigd in Brussel. In haar werk transformeert ze ruimtes tot poëtische, immersieve omgevingen. Door scenografie, architectuur en tactiele kunst te verweven, creëert ze zintuiglijke landschappen die herinnering, zachtheid en emotionele resonantie oproepen. Haar installaties functioneren vaak als portalen: plekken die uitnodigen tot rust, reflectie en herverbinding met lichaam en het onzichtbare."
+             data-lang-en="Nora Mahammed is an interior architect and visual artist based in Brussels. She transforms spaces into poetic and immersive environments. Blending scenography, architecture, and tactile art, she creates sensory landscapes that evoke memory, softness, and emotional resonance. Her installations often function as portals: spaces that invite calm, reflection, and reconnection with the body and the invisible.">
+            Nora Mahammed is interieurarchitect en beeldend kunstenaar...
           </p>
           <div class="meta" style="margin-top:20px" data-lang-nl="Praktisch" data-lang-en="Practical">Praktisch</div>
           <p>
-            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://nora-art.com/</a><br>
-            Contact: <a class="mono-link" href="mailto:nora@email.com">nora@email.com</a>
+            Instagram: <a class="mono-link" href="https://instagram.com/yini.lab" target="_blank">@yini.lab</a> & 
+            <a class="mono-link" href="https://instagram.com/nora.borabora" target="_blank">@nora.borabora</a>
           </p>
         </article>
 
         <article>
           <div class="meta" data-lang-nl="Artist statement" data-lang-en="Artist statement">Artist statement</div>
-          <p data-lang-nl="Mijn werk verkent de fragiele grens tussen observatie en verbeelding. Door fotografie en video te combineren met ruimtelijke ingrepen, creëer ik installaties die de toeschouwer uitnodigen om te vertragen en aandachtiger te kijken. Ik streef naar een poëtische vertaling van alledaagse momenten."
-             data-lang-en="My work explores the fragile boundary between observation and imagination. By combining photography and video with spatial interventions, I create installations that invite viewers to slow down and look more attentively. I aim for a poetic translation of everyday moments.">
-            Mijn werk verkent de fragiele grens tussen observatie en verbeelding...
+          <p data-lang-nl="Mijn installaties zijn zintuiglijke landschappen die functioneren als liefdesspreuken en sensoriële sanctuaria. Projecten zoals *Heart Capsule* en *Remember* nodigen uit tot vertraging, verstilling en verbinding met het lichaam en de onzichtbare lagen van het bestaan. Door licht, textuur en klank in te zetten, creëer ik plekken die tijd doen vervagen en herinnering lichamelijk activeren. Mijn werk wil intimiteit en zachtheid ruimte geven en de bezoeker leiden naar iets diepers, ongeziens en tijdloos."
+             data-lang-en="My installations are sensory landscapes that function as love spells and sensory sanctuaries. Projects such as *Heart Capsule* and *Remember* invite slowing down, stillness, and reconnection with the body and the invisible layers of existence. Through the use of light, texture, and sound, I create spaces where time dissolves and memory is awakened in the body. My work aims to hold space for intimacy and softness, guiding visitors toward something deeper, unseen, and timeless.">
+            Mijn installaties zijn zintuiglijke landschappen die functioneren als liefdesspreuken...
           </p>
         </article>
       </div>
@@ -114,19 +103,19 @@
         <div class="meta" data-lang-nl="Werk" data-lang-en="Work">Werk</div>
         <div class="grid gallery">
           <figure class="module">
-            <img src="../../assets/img/artists/Nora1.jpg" alt="Werk — Nora">
+            <img src="../../assets/img/artists/Nora1.jpg" alt="Werk — Nora Mahammed">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Nora2.jpg" alt="Werk — Nora">
+            <img src="../../assets/img/artists/Nora2.jpg" alt="Werk — Nora Mahammed">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Nora3.jpg" alt="Werk — Nora">
+            <img src="../../assets/img/artists/Nora3.jpg" alt="Werk — Nora Mahammed">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Nora4.jpg" alt="Werk — Nora">
+            <img src="../../assets/img/artists/Nora4.jpg" alt="Werk — Nora Mahammed">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Nora5.jpg" alt="Werk — Nora">
+            <img src="../../assets/img/artists/Nora5.jpg" alt="Werk — Nora Mahammed">
           </figure>
         </div>
       </div>
@@ -150,4 +139,3 @@
   <script src="../../assets/js/app.js" defer></script>
 </body>
 </html>
-
