--- a/index.html
+++ b/index.html
@@ -108,6 +108,40 @@
     <div class="meta" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</div>
     <h2 data-lang-nl="Data" data-lang-en="Dates">Data</h2>
 
+<!-- CTA: route + booklet + audio -->
+<div class="btn-row route-tools">
+  <!-- ROUTE (Google Maps met waypoints) -->
+  <a
+    class="btn btn-primary"
+    target="_blank" rel="noopener"
+    data-lang-nl="Route"
+    data-lang-en="Route"
+    href="https://www.google.com/maps/dir/?api=1&origin=Leuven%20Station&destination=Bondgenotenlaan%20145%2C%203000%20Leuven&waypoints=Bondgenotenlaan%2054%2C%203000%20Leuven|Bondgenotenlaan%2021%2C%203000%20Leuven|Rector%20De%20Somerplein%2011%2C%203000%20Leuven|Bondgenotenlaan%2047%2C%203000%20Leuven|Bondgenotenlaan%2081%2C%203000%20Leuven|Bondgenotenlaan%20131%2C%203000%20Leuven">
+    Route
+  </a>
+
+  <!-- BOEKJE (PDF) -->
+  <a
+    class="btn btn-outline"
+    target="_blank" rel="noopener"
+    data-lang-nl="Boekje"
+    data-lang-en="Booklet"
+    href="assets/booklet/vitrien-boekje.pdf">
+    Boekje
+  </a>
+
+  <!-- AUDIO GUIDE (naar aparte pagina of anker) -->
+  <a
+    class="btn btn-outline"
+    data-lang-nl="Audio"
+    data-lang-en="Audio"
+    href="audioguide.html">
+    Audio
+  </a>
+</div>
+
+    <------------- terug over de data --------->
+    
     <ul class="dates-list">
       <li>
         <strong data-lang-nl="Opening:" data-lang-en="Opening:">Opening:</strong>
