--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     class="btn btn-outline"
     data-lang-nl="Audio"
     data-lang-en="Audio"
-    href="audioguide.html">
+    href="paginas/audioguide.html">
     Audio
   </a>
 </div>
