--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   </a>
 </div>
 
-    <------------- terug over de data --------->
+    <!------------- terug over de data --------->
     
     <ul class="dates-list">
       <li>
