--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         
           <!-- 8–10) Placeholders -->
           <article class="location-card">
-            <h3 class="location-name" data-lang-nl="Juttu" data-lang-en="Juttu">Jutto</h3>
+            <h3 class="location-name" data-lang-nl="Juttu" data-lang-en="Juttu">Juttu</h3>
               <p class="location-address">Bondgenotenlaan 61</p>
             <p class="location-city">3000 Leuven</p>
             <p><a class="mono-link" href="https://www.juttu.be/nl/winkels/leuven.html" target="_blank" rel="noopener">Website</a></p>
