--- a/index.html
+++ b/index.html
@@ -180,52 +180,52 @@
       </a>
     </div>
 
-    <!-- Programma (uitklap) -->
-    <details id="opening-program" class="program-details">
-      <summary data-lang-nl="Programma (13/9)" data-lang-en="Programme (13/9)">Programma (13/9)</summary>
-      <div class="program-schedule">
-        <div class="program-block">
-          <time>15:00</time>
-          <div>
-            <strong data-lang-nl="Deuren open" data-lang-en="Doors open">Deuren open</strong><br>
-            <span data-lang-nl="Expo start in de vitrines" data-lang-en="Exhibition starts in the windows">Expo start in de vitrines</span>
-          </div>
-        </div>
-
-        <div class="program-block">
-          <time>15:30</time>
-          <div>
-            <strong data-lang-nl="Welkom & speeches" data-lang-en="Welcome & speeches">Welkom & speeches</strong><br>
-            <span data-lang-nl="Intro kunstenaars & performances" data-lang-en="Intro to artists & performances">Intro kunstenaars & performances</span>
-          </div>
-        </div>
-
-        <div class="program-block">
-          <time>15:50</time>
-          <div><strong>Performance — Niels Poiz</strong></div>
-        </div>
-
-        <div class="program-block">
-          <time>16:30 & 18:00</time>
-          <div><strong data-lang-nl="Rondleidingen" data-lang-en="Guided tours">Rondleidingen</strong></div>
-        </div>
-
-        <div class="program-block">
-          <time>19:30</time>
-          <div><strong data-lang-nl="Speeches" data-lang-en="Speeches">Speeches</strong></div>
-        </div>
-
-        <div class="program-block">
-          <time>19:50</time>
-          <div><strong>Performance — Camille Lemille</strong></div>
-        </div>
-
-        <div class="program-block">
-          <time>20:30</time>
-          <div><strong data-lang-nl="Avondtour & DJ" data-lang-en="Evening tour & DJ">Avondtour & DJ</strong></div>
-        </div>
+<!-- Programma (uitklap, zonder dubbele 'Programma') -->
+<details id="opening-program" class="program-details">
+  <div class="program-schedule">
+    <div class="program-block">
+      <time>15:00</time>
+      <div>
+        <strong data-lang-nl="Deuren open" data-lang-en="Doors open">Deuren open</strong><br>
+        <span data-lang-nl="Expo start in de vitrines" data-lang-en="Exhibition starts in the windows">Expo start in de vitrines</span>
       </div>
-    </details>
+    </div>
+
+    <div class="program-block">
+      <time>15:30</time>
+      <div>
+        <strong data-lang-nl="Welkom & speeches" data-lang-en="Welcome & speeches">Welkom & speeches</strong><br>
+        <span data-lang-nl="Intro kunstenaars & performances" data-lang-en="Intro to artists & performances">Intro kunstenaars & performances</span>
+      </div>
+    </div>
+
+    <div class="program-block">
+      <time>15:50</time>
+      <div><strong>Performance — Niels Poiz</strong></div>
+    </div>
+
+    <div class="program-block">
+      <time>16:30 & 18:00</time>
+      <div><strong data-lang-nl="Rondleidingen" data-lang-en="Guided tours">Rondleidingen</strong></div>
+    </div>
+
+    <div class="program-block">
+      <time>19:30</time>
+      <div><strong data-lang-nl="Speeches" data-lang-en="Speeches">Speeches</strong></div>
+    </div>
+
+    <div class="program-block">
+      <time>19:50</time>
+      <div><strong>Performance — Camille Lemille</strong></div>
+    </div>
+
+    <div class="program-block">
+      <time>20:30</time>
+      <div><strong data-lang-nl="Avondtour & DJ" data-lang-en="Evening tour & DJ">Avondtour & DJ</strong></div>
+    </div>
+  </div>
+</details>
+
   </div>
 </section>
 
