--- a/index.html
+++ b/index.html
@@ -182,7 +182,10 @@
 
 <!-- Programma (uitklap, zonder dubbele 'Programma') -->
 <details id="opening-program" class="program-details">
+  <summary style="display:none"></summary> <!-- verbergt de standaard 'Details'-knop -->
   <div class="program-schedule">
+
+
     <div class="program-block">
       <time>15:00</time>
       <div>
